--- a/index.html
+++ b/index.html
@@ -11,52 +11,40 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container-fluid">
-    <header>
-     <nav class="navbar navbar-expand-lg bg-estilo-jesu">
+   <header>
+      <nav class="navbar navbar-expand-lg bg-estilo-jesu">
         <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-            <img src="" alt=""></a>
-       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"   aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-       </button>
-       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-         </li>
-         <li class="nav-item">
-          <a class="nav-link" href="#">Tree Wisdom</a>
-          </li>
-          <li class="nav-item">
-          <a class="nav-link" href="#">Worklife</a>
-          </li>
-          <li class="nav-item">
-          <a class="nav-link" href="#">Managment</a>
-          </li>
-          <li class="nav-item">
-          <a class="nav-link" href="#">Environment</a>
-          </li>
-          <li class="nav-item dropdown">
-           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-           </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-         </li>
-        
-        </ul>
-        <form class="d-flex" role="search">
-         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
-         <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-       </div>
-       </div>
-     </nav>
+          <a class="navbar-brand" href="#">
+          <img class="logo-navbar" src="./assets/TreeTale_Logo.png" alt="TreeTale_Logo">
+          </a>
+         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"   aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+         </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+             <li class="nav-item">
+               <a class="nav-link active" aria-current="page" href="#">Home</a>
+             </li>
+             <li class="nav-item">
+               <a class="nav-link" href="./pages/worklife.html">Worklife</a>
+             </li>
+             <li class="nav-item">
+               <a class="nav-link" href="./pages/treeWisdom.html">Tree Wisdom</a>
+             </li>
+             <li class="nav-item">
+               <a class="nav-link" href="./pages/managment.html">Managment</a>
+             </li>
+             <li class="nav-item">
+               <a class="nav-link" href="./pages/environment.html">Environment</a>
+             </li>
+            </ul>
+            <form class="d-flex boton-search" role="search">
+              <input class="form-control me-2 boton-search" type="search" placeholder="Search" aria-label="Search"/>
+              <button class="btn btn-outline-success boton-search" type="submit">Search</button>
+            </form>
+          </div>
+        </div>
+      </nav>
     </header>
      <main>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, expedita iste culpa nisi consectetur saepe eligendi sit id. Ut adipisci blanditiis quasi rerum vel. Et debitis fugiat labore inventore deleniti.</p>
