--- a/index.html
+++ b/index.html
@@ -46,12 +46,27 @@
         </div>
       </nav>
     </header>
-     <main>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, expedita iste culpa nisi consectetur saepe eligendi sit id. Ut adipisci blanditiis quasi rerum vel. Et debitis fugiat labore inventore deleniti.</p>
-     </main>
-     <footer>
+    <main>
+      <div class="card text-bg-dark mb-5">
+        <img src="./assets/banner TreeTale.png" class="imagen-banner" alt="treeclimber_image">
+        <div class="card-img-overlay">
+         <h1 class="card-title">Historias, saberes y herramientas para quienes cuidan los árboles del mundo.</h1>
+         <p class="card-text">Explora, aprende y conéctate con una comunidad global.</p>
 
-     </footer>
+        </div>
+      </div>
+
+      <p class="text-center">Recibe contenido seleccionado, herramientas útiles y lo mejor del mundo arborista directamente en tu correo.</p>
+
+      <div class="d-grid gap-2 col-6 mx-auto">
+       <button class="btn btn-primary w-50 mx-auto" type="button">Unirme a la comunidad</button>
+      </div>
+      
+ 
+    </main>
+    <footer>
+
+    </footer>
     </div>
 
     <!--Bootstrap JS-->
