--- a/index.html
+++ b/index.html
@@ -1,99 +1,189 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <!--Bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <!--ANIMATE-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <!--AOS-->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <!--CSS-->
-    <link rel="stylesheet" href="./styles/styles.css">
-    
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=, initial-scale=1.0">
+  <!--Bootstrap-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+  <!--ANIMATE-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <!--AOS-->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <!--CSS-->
+  <link rel="stylesheet" href="./styles/style.css">
+
+
+  <title>Document</title>
 </head>
+
 <body>
-   <header>
-      <nav class="navbar navbar-expand-lg bg-estilo-jesu">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+  <header>
+    <nav class="navbar navbar-expand-lg bg-estilo-jesu">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
           <img class="logo-navbar" src="./assets/TreeTale_Logo.png" alt="TreeTale_Logo">
-          </a>
-         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"   aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
-         </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-             <li class="nav-item">
-               <a class="nav-link active" aria-current="page" href="#">Home</a>
-             </li>
-             <li class="nav-item">
-               <a class="nav-link" href="./pages/worklife.html">Worklife</a>
-             </li>
-             <li class="nav-item">
-               <a class="nav-link" href="./pages/treeWisdom.html">Tree Wisdom</a>
-             </li>
-             <li class="nav-item">
-               <a class="nav-link" href="./pages/managment.html">Managment</a>
-             </li>
-             <li class="nav-item">
-               <a class="nav-link" href="./pages/environment.html">Environment</a>
-             </li>
-            </ul>
-            <form class="d-flex boton-search" role="search">
-              <input class="form-control me-2 boton-search" type="search" placeholder="Search" aria-label="Search"/>
-              <button class="btn btn-outline-success boton-search" type="submit">Search</button>
-            </form>
-          </div>
-        </div>
-      </nav>
-    </header>
-    <main>
-      <div class="card text-bg-dark mb-5">
-        <img src="./assets/banner TreeTale.png" class="imagen-banner" alt="treeclimber_image">
-        <div class="card-img-overlay">
-         <h1 class="card-title">Historias, saberes y herramientas para quienes cuidan los árboles del mundo.</h1>
-         <p class="card-text">Explora, aprende y conéctate con una comunidad global.</p>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/worklife.html">Worklife</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/treeWisdom.html">Tree Wisdom</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/managment.html">Managment</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/environment.html">Environment</a>
+            </li>
+          </ul>
+          <form class="d-flex boton-search" role="search">
+            <input class="form-control me-2 boton-search" type="search" placeholder="Search" aria-label="Search" />
+            <button class="btn btn-outline-success boton-search" type="submit">Search</button>
+          </form>
         </div>
       </div>
-      <!-- esto de abajo hace referencia a la pestaña worklife. Ambas cosas las meti en un div, ver si esta bien o si no sacarlo-->
-      <div>
-        <p class="text-center">Recibe contenido seleccionado, herramientas útiles y lo mejor del mundo arborista directamente en tu correo.</p>
-        <div class="d-grid gap-2 col-6 mx-auto">
-         <button class="btn btn-primary w-50 mx-auto" type="button">Unirme a la comunidad</button>
-        </div>
+    </nav>
+  </header>
+  <main>
+    <div class="card text-bg-dark mb-5">
+      <img src="./assets/banner TreeTale.png" class="imagen-banner" alt="treeclimber_image">
+      <div class="card-img-overlay">
+        <h1 class="card-title">Historias, saberes y herramientas para quienes cuidan los árboles del mundo.</h1>
+        <p class="card-text">Explora, aprende y conéctate con una comunidad global.</p>
       </div>
-
-      <div class="card mb-5 mt-5 mx-auto" style="max-width: 850px;">
-        <div class="row g-0">
-          <div class="col-md-6">
-           <img src="./assets/Arboristas-tres-parque.png" class="img-fluid rounded-start" alt="arboristas-en-parque">
-          </div>
-          <div class="col-md-6">
-            <div class="card-body">
-             <h5 class="card-title">Del árbol al aprendizaje: miradas desde el oficio.</h5>
-             <p class="card-text">Aprende cómo arboristas del mundo enfrentan desafíos reales: desde poda en altura hasta liderazgo de equipos. Conoce casos reales, herramientas y decisiones que inspiran.</p>
-            </div>
-          </div>
-        </div>
+    </div>
+    <!-- esto de abajo hace referencia a la pestaña worklife. Ambas cosas las meti en un div, ver si esta bien o si no sacarlo-->
+    <div>
+      <p class="text-center">Recibe contenido seleccionado, herramientas útiles y lo mejor del mundo arborista
+        directamente en tu correo.</p>
+      <div class="d-grid gap-2 col-6 mx-auto">
+        <button class="btn btn-primary w-50 mx-auto" type="button">Unirme a la comunidad</button>
       </div>
- 
-
-      
-    </main>
-    <footer>
-
-    </footer>
     </div>
 
-    <!--Bootstrap JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
-    <!--AOS-->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-      AOS.init();
-    </script>
+    <div class="card mb-5 mt-5 mx-auto" style="max-width: 850px;">
+      <div class="row g-0">
+        <div class="col-md-6">
+          <img src="./assets/Arboristas-tres-parque.png" class="img-fluid rounded-start" alt="arboristas-en-parque">
+        </div>
+        <div class="col-md-6">
+          <div class="card-body">
+            <h5 class="card-title">Del árbol al aprendizaje: miradas desde el oficio.</h5>
+            <p class="card-text">Aprende cómo arboristas del mundo enfrentan desafíos reales: desde poda en altura hasta
+              liderazgo de equipos. Conoce casos reales, herramientas y decisiones que inspiran.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="table-responsive">
+      <table class="table align-middle">
+        <thead>
+          <tr>
+            <th>Worklife</th>
+            <th>Tree Wisdom</th>
+            <th>Environment</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr class="align-top">
+            <td>
+              <h4>Técnicas, herramientas y experiencia en terreno.</h4>
+              <h5>Accede a contenido práctico sobre poda, escalada, normativas y equipos. Aquí se comparten aprendizajes
+                reales del trabajo diario, con testimonios, buenas prácticas y recursos que fortalecen la labor
+                profesional del arborista.</h5>
+            </td>
+            <td>
+              <h4>Técnicas, herramientas y experiencia en terreno.</h4>
+              <h5>Accede a contenido práctico sobre poda, escalada, normativas y equipos. Aquí se comparten aprendizajes
+                reales del trabajo diario, con testimonios, buenas prácticas y recursos que fortalecen la labor
+                profesional del arborista.</h5>
+            </td>
+            <td>
+              <h4>Técnicas, herramientas y experiencia en terreno.</h4>
+              <h5>Accede a contenido práctico sobre poda, escalada, normativas y equipos. Aquí se comparten aprendizajes
+                reales del trabajo diario, con testimonios, buenas prácticas y recursos que fortalecen la labor
+                profesional del arborista.</h5>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="card mb-5">
+      <img src="./assets/Grupo.arboristas.saludando.png" class="card-img-top" alt="grupo-de-arboristas">
+      <div class="card-body">
+        <h5 class="card-title">Ya somos cientos, y seguimos creciendo!</h5>
+        <p class="card-text">Únete a una comunidad que no solo sube a los árboles, sino que también eleva el
+          conocimiento, la ética y el propósito de esta profesión.</p>
+        <p class="card-text"><small class="text-body-secondary">Aquí cultivamos saberes, compartimos experiencias y
+            crecemos juntos.</small></p>
+        <button class="btn btn-primary w-50 mx-auto" type="button">Quiero ser parte</button>
+      </div>
+    </div>
+
+  </main>
+  <footer class="py-5">
+      <div class="row">
+        <div>
+          <img class="logo-navbar" src="./assets/TreeTale_Logo.png" alt="TreeTale_Logo">
+        </div>
+        <div class="col-6 col-md-2 mb-3">
+          <h5>Secciones</h5>
+          <ul class="nav flex-column">
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Home</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Worklife</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Tree Wisdom</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Environment</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Managment</a></li>
+          </ul>
+        </div>
+        <div class="col-md-5 offset-md-1 mb-3">
+          <form>
+            <h5>Suscríbete a nuestra Newsletter</h5>
+            <p>Y recibe contenido nuevo cada semana.</p>
+            <div class="d-flex flex-column flex-sm-row w-100 gap-2"> <label for="newsletter1"
+                class="visually-hidden">tu correo</label> <input id="newsletter1" type="email" class="form-control"
+                placeholder="Email address"> <button class="btn btn-primary" type="button">Suscribirme</button> </div>
+          </form>
+        </div>
+      </div>
+      <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
+        <p>© 2025 Company, Inc. All rights reserved.</p>
+        <ul class="list-unstyled d-flex">
+          <li class="ms-3"><a class="link-body-emphasis" href="#" aria-label="Instagram"><svg class="bi" width="24"
+                height="24">
+                <use xlink:href="#instagram"></use>
+              </svg></a></li>
+          <li class="ms-3"><a class="link-body-emphasis" href="#" aria-label="Facebook"><svg class="bi" width="24"
+                height="24" aria-hidden="true">
+                <use xlink:href="#facebook"></use>
+              </svg></a></li>
+        </ul>
+      </div>
+  </footer>
+
+  </div>
+
+  <!--Bootstrap JS-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+    crossorigin="anonymous"></script>
+  <!--AOS-->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
+
 </html>
