--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-expand-lg bg-estilo-jesu">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img class="logo-navbar" src="./assets/TreeTale_Logo.png" alt="TreeTale_Logo">
+          <img class="logo-navbar" src="./assets/Logo-Tree-Tale.png" alt="Logo-TreeTale">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -133,44 +133,68 @@
     </div>
 
   </main>
-  <footer class="py-5">
+  <footer class="py-5 estilo-footer-jesu">
+    <div class="container">
       <div class="row">
-        <div>
-          <img class="logo-navbar" src="./assets/TreeTale_Logo.png" alt="TreeTale_Logo">
+        <!--Logo-->
+        <div class="col-6 col-md-2 mb-3">
+          <img class="logo-navbar" src="./assets/Logo-Tree-Tale.png" alt="Logo-TreeTale">
         </div>
+        <!--Links-->
         <div class="col-6 col-md-2 mb-3">
           <h5>Secciones</h5>
           <ul class="nav flex-column">
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Home</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Worklife</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Tree Wisdom</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Environment</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Managment</a></li>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">Home</a>
+            </li>
+            <li class="nav-item mb-2">
+              <a href="./pages/worklife.html" class="nav-link p-0 text-body-secondary">Worklife</a>
+            </li>
+            <li class="nav-item mb-2">
+              <a href="./pages/treeWisdom.html" class="nav-link p-0 text-body-secondary">Tree Wisdom</a>
+            </li>
+            <li class="nav-item mb-2">
+              <a href="./pages/environment.html" class="nav-link p-0 text-body-secondary">Environment</a>
+            </li>
+            <li class="nav-item mb-2">
+              <a href="./pages/managment.html" class="nav-link p-0 text-body-secondary">Managment</a>
+            </li>
           </ul>
         </div>
+        <!--Newsletter-->
         <div class="col-md-5 offset-md-1 mb-3">
           <form>
             <h5>Suscríbete a nuestra Newsletter</h5>
             <p>Y recibe contenido nuevo cada semana.</p>
-            <div class="d-flex flex-column flex-sm-row w-100 gap-2"> <label for="newsletter1"
-                class="visually-hidden">tu correo</label> <input id="newsletter1" type="email" class="form-control"
-                placeholder="Email address"> <button class="btn btn-primary" type="button">Suscribirme</button> </div>
+            <div class="d-flex flex-column flex-sm-row w-100 gap-2"> <label for="newsletter1" class="visually-hidden">tu
+                correo</label> <input id="newsletter1" type="email" class="form-control" placeholder="Email address">
+              <button class="btn btn-estilo-jesu" type="button">Suscribirme</button> 
+            </div>
           </form>
         </div>
       </div>
-      <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
-        <p>© 2025 Company, Inc. All rights reserved.</p>
+      <!--Parte de abajo-->
+      <div class="container d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
+        <p>© 2025 TreeTale. Todos los derechos reservados.</p>
         <ul class="list-unstyled d-flex">
-          <li class="ms-3"><a class="link-body-emphasis" href="#" aria-label="Instagram"><svg class="bi" width="24"
-                height="24">
-                <use xlink:href="#instagram"></use>
-              </svg></a></li>
-          <li class="ms-3"><a class="link-body-emphasis" href="#" aria-label="Facebook"><svg class="bi" width="24"
-                height="24" aria-hidden="true">
-                <use xlink:href="#facebook"></use>
-              </svg></a></li>
+          <li class="ms-3">
+            <a class="link-body-emphasis" href="./assets/instagram-logo.png" aria-label="Instagram">
+              <img src="./assets/instagram-logo.png" alt="Instagram-logo">
+            </a>
+          </li>
+          <li class="ms-3">
+            <a class="link-body-emphasis" href="#" aria-label="Youtube">
+              <img src="./assets/youtube-logo.png" alt="youtube-logo">
+            </a>
+          </li>
+          <li class="ms-3">
+            <a class="link-body-emphasis" href="#" aria-label="Linkedin">
+              <img src="./assets/linkedin-logo.png" alt="linkedin-logo">
+            </a>
+          </li>
         </ul>
       </div>
+    </div>
   </footer>
 
   </div>
