--- a/pages/environment.html
+++ b/pages/environment.html
@@ -1,14 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <!--ANIMATE-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!--AOS-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--CSS-->
-    <link rel="stylesheet" href="../styles/styles.css">
-    
+    <link rel="stylesheet" href="../styles/style.css">
+
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <nav class="navbar navbar-expand-lg bg-estilo-jesu">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img class="logo-navbar" src="../assets/Logo-Tree-Tale.png" alt="Logo-TreeTale">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="../index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./worklife.html">Worklife</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./treeWisdom.html">Tree Wisdom</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link"  href="./managment.html">Managment</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Environment</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex boton-search" role="search">
+                        <input class="form-control me-2 boton-search" type="search" placeholder="Search"
+                            aria-label="Search" />
+                        <button class="btn btn-outline-success boton-search" type="submit">Search</button>
+                    </form>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main>
+
+    </main>
+    <footer class="py-5 estilo-footer-jesu">
+        <div class="container">
+            <div class="row">
+                <!--Logo-->
+                <div class="col-6 col-md-2 mb-3">
+                    <img class="logo-navbar" src="../assets/Logo-Tree-Tale.png" alt="Logo-TreeTale">
+                </div>
+                <!--Links-->
+                <div class="col-6 col-md-2 mb-3">
+                    <h5>Secciones</h5>
+                    <ul class="nav flex-column">
+                        <li class="nav-item mb-2">
+                            <a href="../index.html" class="nav-link p-0 text-body-secondary">Home</a>
+                        </li>
+                        <li class="nav-item mb-2">
+                            <a href="./worklife.html" class="nav-link p-0 text-body-secondary">Worklife</a>
+                        </li>
+                        <li class="nav-item mb-2">
+                            <a href="./treeWisdom.html" class="nav-link p-0 text-body-secondary">Tree Wisdom</a>
+                        </li>
+                        <li class="nav-item mb-2">
+                            <a href="#" class="nav-link p-0 text-body-secondary">Environment</a>
+                        </li>
+                        <li class="nav-item mb-2">
+                            <a href="./managment.html" class="nav-link p-0 text-body-secondary">Managment</a>
+                        </li>
+                    </ul>
+                </div>
+                <!--Newsletter-->
+                <div class="col-md-5 offset-md-1 mb-3">
+                    <form>
+                        <h5>Suscríbete a nuestra Newsletter</h5>
+                        <p>Y recibe contenido nuevo cada semana.</p>
+                        <div class="d-flex flex-column flex-sm-row w-100 gap-2"> <label for="newsletter1"
+                                class="visually-hidden">tu
+                                correo</label> <input id="newsletter1" type="email" class="form-control"
+                                placeholder="Email address">
+                            <button class="btn btn-estilo-jesu" type="button">Suscribirme</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <!--Parte de abajo-->
+            <div class="container d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
+                <p>© 2025 TreeTale. Todos los derechos reservados.</p>
+                <ul class="list-unstyled d-flex">
+                    <li class="ms-3">
+                        <a class="link-body-emphasis" href="./assets/instagram-logo.png" aria-label="Instagram">
+                            <img src="../assets/instagram-logo.png" alt="Instagram-logo">
+                        </a>
+                    </li>
+                    <li class="ms-3">
+                        <a class="link-body-emphasis" href="#" aria-label="Youtube">
+                            <img src="../assets/youtube-logo.png" alt="youtube-logo">
+                        </a>
+                    </li>
+                    <li class="ms-3">
+                        <a class="link-body-emphasis" href="#" aria-label="Linkedin">
+                            <img src="../assets/linkedin-logo.png" alt="linkedin-logo">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+    <!--Bootstrap JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+        crossorigin="anonymous"></script>
+    <!--AOS-->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
+
 </html>
