Se agregó mas cards en worlife.html

--- a/pages/environment.html
+++ b/pages/environment.html
@@ -16,6 +16,7 @@
 
     <title>Document</title>
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-expand-lg bg-estilo-jesu">
@@ -40,7 +41,7 @@
                             <a class="nav-link" href="./treeWisdom.html">Tree Wisdom</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link"  href="./managment.html">Managment</a>
+                            <a class="nav-link" href="./managment.html">Managment</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Environment</a>
@@ -56,6 +57,13 @@
         </nav>
     </header>
     <main>
+        <div class=" container titulo-page">
+            <h3>Environment</h3>
+            <h6>El rol del arborismo frente a la crisis climática y el entorno.</h6>
+            <p>Reflexiones, datos y acciones sobre cómo cuidar los árboles es también cuidar ciudades, ecosistemas y
+                nuestra propia resiliencia como especie.
+            </p>
+        </div>
 
     </main>
     <footer class="py-5 estilo-footer-jesu">
