--- a/pages/managment.html
+++ b/pages/managment.html
@@ -56,6 +56,12 @@
         </nav>
     </header>
     <main>
+        <div class="container titulo-page">
+            <h3>Managment</h3>
+            <h6>Gestión del arbolado y toma de decisiones responsables.</h6>
+            <p>Contenido sobre planificación, manejo sostenible, normativas, criterios técnicos y desafíos del
+                arborismo en entornos urbanos y naturales.</p>
+        </div>
 
     </main>
     <footer class="py-5 estilo-footer-jesu">
