--- a/pages/treeWisdom.html
+++ b/pages/treeWisdom.html
@@ -56,7 +56,28 @@
         </nav>
     </header>
     <main>
-
+        <div class="container titulo-page">
+            <h3>Tree Wisdom</h3>
+            <h6>Saberes ancestrales, filosofía arbórea y visiones de futuro.</h6>
+            <p>Aquí se entrelazan culturas, espiritualidad y ciencia para entender a los árboles como maestros,
+                guardianes y aliados en nuestra conexión con el planeta.</p>
+        </div>
+        <div class="card mb-5 mt-5 mx-auto" style="max-width: 850px;">
+            <div class="row g-0">
+                <div class="col-md-6">
+                    <img src="../assets/Arboristas-tres-parque.png" class="img-fluid rounded-start"
+                        alt="arboristas-en-parque">
+                </div>
+                <div class="col-md-6">
+                    <div class="card-body">
+                        <h5 class="card-title">Del árbol al aprendizaje: miradas desde el oficio.</h5>
+                        <p class="card-text">Aprende cómo arboristas del mundo enfrentan desafíos reales: desde poda en
+                            altura hasta
+                            liderazgo de equipos. Conoce casos reales, herramientas y decisiones que inspiran.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <footer class="py-5 estilo-footer-jesu">
         <div class="container">
