--- a/pages/worklife.html
+++ b/pages/worklife.html
@@ -56,39 +56,84 @@
         </nav>
     </header>
     <main>
-
-        <div class="row row-cols-1 row-cols-md-3 g-4">
-            <div class="col">
-                <div class="card h-100">
-                    <img src="../assets/Card-1.png" class="card-img-top" alt="arborista-escalando">
-                    <div class="card-body">
-                        <h5 class="card-title">Escalada Segura en Árboles Urbanos</h5>
+        <div class="container titulo-page">
+            <h3>Worklife</h3>
+            <h6>La vida cotidiana del arborista, desde el terreno hasta el equipo.</h6>
+            <p>Técnicas, herramientas, experiencias reales y todo lo que hace posible un trabajo profesional, seguro y
+                consciente junto a los árboles.</p>
+        </div>
+        <div class="container py-5">
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../assets/Card-1.png" class="card-img-top" alt="arborista-escalando">
+                        <div class="card-body">
+                            <h5 class="card-title">Escalada Segura en Árboles Urbanos</h5>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="../assets/Card-2.png" class="card-img-top" alt="arborista-podando">
-                    <div class="card-body">
-                        <h5 class="card-title">Técnicas de Poda Profesional</h5>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../assets/Card-2.png" class="card-img-top" alt="arborista-podando">
+                        <div class="card-body">
+                            <h5 class="card-title">Técnicas de Poda Profesional</h5>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="../assets/card-3.png" class="card-img-top" alt="equipo-arborismo">
-                    <div class="card-body">
-                        <h5 class="card-title">Equipamiento Esencial para el Día a Día</h5>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../assets/card-3.png" class="card-img-top" alt="equipo-arborismo">
+                        <div class="card-body">
+                            <h5 class="card-title">Equipamiento Esencial para el Día a Día</h5>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../assets/Card-4.png" class="card-img-top" alt="arboristas-analizando-árbol">
+                        <div class="card-body">
+                            <h5 class="card-title">Evaluación de Riesgos en Terreno</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../assets/Card-5.png" class="card-img-top" alt="arborista-revisando-doc.">
+                        <div class="card-body">
+                            <h5 class="card-title">Normativas y Estándares ISA en Acción</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../assets/Card-6.png" class="card-img-top" alt="arborista-comunicación">
+                        <div class="card-body">
+                            <h5 class="card-title">Trabajo en Equipo y Comunicación en Altura</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../assets/Card-7.png" class="card-img-top" alt="arborista-enseñanza">
+                        <div class="card-body">
+                            <h5 class="card-title">Aprendizajes de Campo: Errores que Enseñan</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../assets/Card-8.png" class="card-img-top" alt="arborista-tiempo">
+                        <div class="card-body">
+                            <h5 class="card-title">Gestión del Tiempo y Rutinas de Trabajo</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../assets/Card-9.png" class="card-img-top" alt="arborista-mantención">
+                        <div class="card-body">
+                            <h5 class="card-title">Mantenimiento y Cuidado de Herramientas</h5>
+                        </div>
                     </div>
                 </div>
             </div>
