se agregó cont. a Tree Wisdom

--- a/pages/environment.html
+++ b/pages/environment.html
@@ -64,6 +64,13 @@
                 nuestra propia resiliencia como especie.
             </p>
         </div>
+        <div class="card text-bg-dark mb-5">
+            <img src="." class="imagen-banner" alt="">
+            <div class="card-img-overlay">
+                <h2 class="card-title">xx</h2>
+                <p class="card-text">xxx</p>
+            </div>
+        </div>
 
     </main>
     <footer class="py-5 estilo-footer-jesu">
