--- a/pages/treeWisdom.html
+++ b/pages/treeWisdom.html
@@ -61,23 +61,102 @@
             <h6>Saberes ancestrales, filosofía arbórea y visiones de futuro.</h6>
             <p>Aquí se entrelazan culturas, espiritualidad y ciencia para entender a los árboles como maestros,
                 guardianes y aliados en nuestra conexión con el planeta.</p>
-        </div>
-        <div class="card mb-5 mt-5 mx-auto" style="max-width: 850px;">
-            <div class="row g-0">
-                <div class="col-md-6">
-                    <img src="../assets/Arboristas-tres-parque.png" class="img-fluid rounded-start"
-                        alt="arboristas-en-parque">
-                </div>
-                <div class="col-md-6">
-                    <div class="card-body">
-                        <h5 class="card-title">Del árbol al aprendizaje: miradas desde el oficio.</h5>
-                        <p class="card-text">Aprende cómo arboristas del mundo enfrentan desafíos reales: desde poda en
-                            altura hasta
-                            liderazgo de equipos. Conoce casos reales, herramientas y decisiones que inspiran.</p>
+
+            <div class="card card-estilo-jesu mb-5 mt-5 mx-auto">
+                <div class="row g-0">
+                    <div class="col-md-6">
+                        <img src="../assets/árbol-treeWisdom.ok.png" class="img-fluid rounded-start"
+                            alt="arbol-sabiduría">
+                    </div>
+                    <div class="col-md-6 d-flex texto-card-jesu">
+                        <div class="card-body">
+                            <h5 class="card-title">La sabiduría del bosque nos guía hacia el futuro.</h5>
+                            <p class="card-text">A lo largo de la historia, los árboles han sido símbolo de conexión,
+                                sabiduría y equilibrio.
+                                Tree Wisdom es un espacio donde convergen conocimientos ancestrales, espiritualidad
+                                natural
+                                y ciencia regenerativa para quienes quieren entender más profundamente su rol junto a
+                                los
+                                árboles.</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="container titulo-parrafo">
+            <h4>Conocimiento que conecta pasado y presente</h4>
+            <p>Durante siglos, los árboles han sido una fuente constante de observación, estudio y enseñanza. En esta
+                sección reunimos conocimientos ancestrales y hallazgos científicos actuales que ayudan a
+                entender mejor nuestro entorno natural.
+                Desde prácticas tradicionales hasta investigaciones botánicas, aquí encontrarás ideas valiosas para
+                aplicar en el trabajo, la gestión y la relación con los árboles hoy.
+            </p>
+        </div>
+        <div class="container py-5">
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../assets/Card-4-TreeWisdom.png" class="card-img-top" alt="interconeccion-árboles">
+                        <div class="card-body">
+                            <h5 class="card-title">Neurobotánica y comunicación entre árboles</h5>
+                            <p class="card-text">Investigaciones sobre cómo los árboles perciben, se adaptan y se
+                                comunican a través de redes subterráneas y señales químicas.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../assets/Card-5-TreeWisdom.png" class="card-img-top" alt="resilencia-árboles">
+                        <div class="card-body">
+                            <h5 class="card-title">Inteligencia vegetal y resiliencia natural</h5>
+                            <p class="card-text">Cómo los árboles resuelven problemas, se defienden, cooperan y
+                                regeneran, revelando formas no humanas de inteligencia.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../assets/card-6-TreeWisdom.png" class="card-img-top" alt="árbol-anciano">
+                        <div class="card-body">
+                            <h5 class="card-title">El tiempo arbóreo y su mensaje ecológico</h5>
+                            <p class="card-text">Lo que el ritmo lento, la longevidad y la memoria de los árboles nos
+                                enseñan sobre sostenibilidad y futuro planetario.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../assets/Card-1-TreeWisdom.png" class="card-img-top" alt="árbol-sagrado">
+                        <div class="card-body">
+                            <h5 class="card-title">Árboles sagrados y guardianes espirituales</h5>
+                            <p class="card-text">Cómo distintas culturas originarias reconocen a los árboles como
+                                protectores, guías o ancestros vivos.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../assets/Card-2-TreeWisdom.png" class="card-img-top" alt="cultura-ancestral">
+                        <div class="card-body">
+                            <h5 class="card-title">Cosmovisión ancestral y equilibrio con el bosque</h5>
+                            <p class="card-text">Relación armónica entre pueblos originarios y los ciclos naturales del
+                                bosque, donde el árbol no es recurso, sino pariente.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../assets/Card-3-TreeWisdom.png" class="card-img-top" alt="relatos-ancestrales">
+                        <div class="card-body">
+                            <h5 class="card-title">Relatos y mitos que nacen de los árboles</h5>
+                            <p class="card-text">Fábulas, leyendas y enseñanzas tradicionales que transmiten ética,
+                                respeto y conexión a través del lenguaje simbólico del árbol.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </main>
     <footer class="py-5 estilo-footer-jesu">
         <div class="container">
