Agregué pag environment y managment

--- a/pages/environment.html
+++ b/pages/environment.html
@@ -57,21 +57,82 @@
         </nav>
     </header>
     <main>
-        <div class=" container titulo-page">
-            <h3>Environment</h3>
-            <h6>El rol del arborismo frente a la crisis climática y el entorno.</h6>
-            <p>Reflexiones, datos y acciones sobre cómo cuidar los árboles es también cuidar ciudades, ecosistemas y
-                nuestra propia resiliencia como especie.
-            </p>
-        </div>
-        <div class="card text-bg-dark mb-5">
-            <img src="." class="imagen-banner" alt="">
+        <div class="card text-bg-dark">
+            <img src="../assets/banner-environment.png" class="card-img" alt="...">
             <div class="card-img-overlay">
-                <h2 class="card-title">xx</h2>
-                <p class="card-text">xxx</p>
+                <h5 class="card-title">Environment</h5>
+                <p class="card-text">El rol del arborismo frente a la crisis climática y el entorno.</p>
+                <p class="card-text"><small>Last updated 3 mins ago</small></p>
             </div>
         </div>
-
+        <div class="container titulo-page">
+            <h3>Arborismo como respuesta climática y urbana.</h3>
+            <h6>El cambio climático, la crisis hídrica y la pérdida de biodiversidad ya no son futuro: son presente. En
+                esta sección abordamos el rol activo del arborismo en la construcción de ciudades más resilientes,
+                saludables y sostenibles.</h6>
+        </div>
+        <div class="card card-estilo-jesu mb-5 mt-5 mx-auto">
+            <div class="row g-0">
+                <div class="col-md-6">
+                    <img src="../assets/arboles-urbanos-card.png" class="img-fluid rounded-start"
+                        alt="vista aerea urbana con muchos árboles">
+                </div>
+                <div class="col-md-6 d-flex texto-card-jesu">
+                    <div class="card-body">
+                        <h5 class="card-title">Cuidar árboles es cuidar comunidad.</h5>
+                        <p class="card-text">Los árboles urbanos son infraestructura viva.
+                            Mitigan el calor, filtran el aire, conservan el agua y unen barrios.
+                            Su presencia mejora la calidad de vida, conecta a las personas con su entorno y hace que las
+                            ciudades sean más habitables, resilientes y justas.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Adaptación Climática</h5>
+                <p class="card-text">Los árboles enfrían, protegen y estabilizan.</p>
+                <p class="card-text"><small class="text-body-secondary">En un escenario de olas de calor e inundaciones
+                        crecientes, el arbolado urbano cumple un rol clave. Regulan la temperatura, reducen el efecto
+                        isla de calor y absorben agua de lluvia, ayudando a mitigar los impactos del cambio climático en
+                        las ciudades.</small></p>
+            </div>
+            <img src="../assets/tronco-environment.png" class="card-img-bottom"
+                alt="tronco de arbol acostado, se detalla corteza">
+        </div>
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Infraestructura Verde</h5>
+                <p class="card-text">Más que paisaje: son parte del sistema.</p>
+                <p class="card-text"><small class="text-body-secondary">Los árboles no son decoración. Son
+                        infraestructura funcional que filtra contaminantes, retiene partículas, mejora la salud pública
+                        y reduce costos energéticos. Incorporarlos estratégicamente es parte de un urbanismo eficiente y
+                        sostenible.</small></p>
+            </div>
+            <img src="../assets/hojas-environment.png" class="card-img-bottom" alt="patrón de hojas de arbol">
+        </div>
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Adaptación Climática</h5>
+                <p class="card-text">Los árboles enfrían, protegen y estabilizan..</p>
+                <p class="card-text"><small class="text-body-secondary">En un escenario de olas de calor e inundaciones
+                        crecientes, el arbolado urbano cumple un rol clave. Regulan la temperatura, reducen el efecto
+                        isla de calor y absorben agua de lluvia, ayudando a mitigar los impactos del cambio climático en
+                        las ciudades.</small></p>
+            </div>
+            <img src="../assets/agua-environment.png" class="card-img-bottom" alt="zoom-in del agua en movimiento">
+        </div>
+        <div class="card text-center mb-3" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title">El impacto comienza con cada árbol</h5>
+                <p class="card-text">Cada poda consciente, cada árbol bien ubicado y cada comunidad que protege su
+                    entorno suma.
+                    El arborismo no es solo técnica, es también una forma activa de responder a la crisis ambiental
+                    desde lo local.</p>
+                <a href="#" class="btn btn-primary">Explora buenas prácticas</a>
+            </div>
+        </div>
     </main>
     <footer class="py-5 estilo-footer-jesu">
         <div class="container">
