--- a/pages/managment.html
+++ b/pages/managment.html
@@ -58,10 +58,60 @@
     <main>
         <div class="container titulo-page">
             <h3>Managment</h3>
-            <h6>Gestión del arbolado y toma de decisiones responsables.</h6>
-            <p>Contenido sobre planificación, manejo sostenible, normativas, criterios técnicos y desafíos del
-                arborismo en entornos urbanos y naturales.</p>
+            <h6>Gestionar bien, crecer con sentido.</h6>
+            <p>El saber técnico no basta para sostener un negocio arborista. Esta sección entrega herramientas de
+                planificación, estrategia y organización para que tu empresa sea viable, ética y resiliente.</p>
         </div>
+        <div class="card card-estilo-jesu mb-5 mt-5 mx-auto">
+            <div class="row g-0">
+                <div class="col-md-6">
+                    <img src="../assets/arborista-managment.png" class="img-fluid rounded-start"
+                        alt="arborista sentado en su escritorio al aire libre revisando papeles administrativos">
+                </div>
+                <div class="col-md-6 d-flex texto-card-jesu">
+                    <div class="card-body">
+                        <h5 class="card-title">El árbol no crece sin raíz: tu empresa tampoco.</h5>
+                        <p class="card-text">Muchos arboristas dominan el terreno, pero se pierden al momento de cobrar,
+                            planificar o escalar su negocio. Una buena gestión no solo mejora los resultados económicos,
+                            también protege la calidad del servicio, el bienestar del árbol y la confianza de tus
+                            clientes.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container py-5">
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../assets/arborista-managment.png" class="card-img-top" alt="">
+                        <div class="card-body">
+                            <h5 class="card-title">Finanzas claras</h5>
+                            <p class="card-text">Aprende a cotizar bien, separar ingresos y gastos, y asegurar la
+                                sostenibilidad de tu negocio.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../assets/mapa-mental-managment.png" class="card-img-top" alt="">
+                        <div class="card-body">
+                            <h5 class="card-title">Estrategia con propósito</h5>
+                            <p class="card-text">Cómo diseñar tu oferta de valor, elegir clientes adecuados y
+                                diferenciarte sin perder tu ética profesional.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../assets/tasks-managment.png" class="card-img-top" alt="">
+                        <div class="card-body">
+                            <h5 class="card-title">Organización y procesos</h5>
+                            <p class="card-text">Herramientas simples para ordenar tu calendario, equipo, documentación
+                                y servicios. Menos caos, más eficiencia.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
     </main>
     <footer class="py-5 estilo-footer-jesu">
