Agregué elementos a Managment

--- a/pages/managment.html
+++ b/pages/managment.html
@@ -57,8 +57,7 @@
     </header>
     <main>
         <div class="container titulo-page">
-            <h3>Managment</h3>
-            <h6>Gestionar bien, crecer con sentido.</h6>
+            <h3>Gestionar bien, crecer con sentido.</h3>
             <p>El saber técnico no basta para sostener un negocio arborista. Esta sección entrega herramientas de
                 planificación, estrategia y organización para que tu empresa sea viable, ética y resiliente.</p>
         </div>
@@ -79,11 +78,22 @@
                 </div>
             </div>
         </div>
+        <div class="container my-5">
+            <div class="text-center mb-4">
+                <h3>Gestionar con inteligencia también es arborismo</h3>
+                <p>Saber trabajar en el árbol es solo la mitad del camino. La otra mitad se construye en el escritorio,
+                    planificando, organizando y tomando decisiones claras.
+                    Explora estos tres enfoques claves para transformar tu oficio en un proyecto sólido, rentable y con
+                    impacto real.
+                </p>
+            </div>
+        </div>
         <div class="container py-5">
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
                     <div class="card h-100">
-                        <img src="../assets/arborista-managment.png" class="card-img-top" alt="">
+                        <img src="../assets/oficina-managment.png" class="card-img-top"
+                            alt="zoom-in a manos de arborista revisando papeles administrativos">
                         <div class="card-body">
                             <h5 class="card-title">Finanzas claras</h5>
                             <p class="card-text">Aprende a cotizar bien, separar ingresos y gastos, y asegurar la
@@ -111,6 +121,97 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <!--Carrusel de Comentarios-->
+            <div id="carouselCards" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="container" style="max-width: 950px;">
+                            <div class="card">
+                                <div class="card-header">
+                                    Falta de visión a largo plazo
+                                </div>
+                                <div class="card-body">
+                                    <figure>
+                                        <blockquote class="blockquote">
+                                            <p>“Trabajamos sin parar, pero muchas veces sin saber hacia dónde vamos. Hace falta levantar la cabeza y pensar: ¿qué quiero construir con esto?”</p>
+                                        </blockquote>
+                                        <figcaption class="blockquote-footer">
+                                            <cite title="Source Title">Miembro Comunidad Treetale.</cite>
+                                        </figcaption>
+                                    </figure>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="container" style="max-width: 950px;">
+                            <div class="card">
+                                <div class="card-header">
+                                    Dificultad para cobrar
+                                </div>
+                                <div class="card-body">
+                                    <figure>
+                                        <blockquote class="blockquote">
+                                            <p>“Una cosa es amar lo que haces, y otra es saber ponerle precio. A veces terminamos trabajando por menos de lo que vale, y eso te agota.”</p>
+                                        </blockquote>
+                                        <figcaption class="blockquote-footer">
+                                            <cite title="Source Title">Miembro Comunidad Treetale.</cite>
+                                        </figcaption>
+                                    </figure>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="container" style="max-width: 950px;">
+                            <div class="card">
+                                <div class="card-header">
+                                    Falta de formación en gestión
+                                </div>
+                                <div class="card-body">
+                                    <figure>
+                                        <blockquote class="blockquote">
+                                            <p>“Sabemos cuidar árboles, pero nadie nos enseñó a llevar un negocio. Y eso también es parte de hacer bien nuestro trabajo.”</p>
+                                        </blockquote>
+                                        <figcaption class="blockquote-footer">
+                                            <cite title="Source Title">Miembro Comunidad Treetale.</cite>
+                                        </figcaption>
+                                    </figure>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="container" style="max-width: 950px;">
+                            <div class="card">
+                                <div class="card-header">
+                                    Desorden interno que afecta todo
+                                </div>
+                                <div class="card-body">
+                                    <figure>
+                                        <blockquote class="blockquote">
+                                            <p>“En el árbol trabajamos bien, pero fuera de eso todo es un caos: presupuestos, agendas, cobros... Si no ordenamos eso, se nos va todo de las manos.”</p>
+                                        </blockquote>
+                                        <figcaption class="blockquote-footer">
+                                            <cite title="Source Title">Miembro Comunidad Treetale.</cite>
+                                        </figcaption>
+                                    </figure>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselCards"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon bg-dark rounded-circle" aria-hidden="true"></span>
+                    <span class="visually-hidden">Anterior</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselCards"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon bg-dark rounded-circle" aria-hidden="true"></span>
+                    <span class="visually-hidden">Siguiente</span>
+                </button>
             </div>
 
     </main>
@@ -180,6 +281,24 @@
         </div>
     </footer>
     <!--Bootstrap JS-->
+    <div class="carousel-item">
+        <div class="card">
+            <div class="card-header">
+                Desorganización operativa
+            </div>
+            <div class="card-body">
+                <figure>
+                    <blockquote class="blockquote">
+                        <p>“Podamos bien, trabajamos duro, pero el caos interno nos hace perder tiempo y
+                            clientes. Ordenar el negocio también es parte del oficio.”</p>
+                    </blockquote>
+                    <figcaption class="blockquote-footer">
+                        <cite title="Source Title">Miembro Comunidad Treetale.</cite>
+                    </figcaption>
+                </figure>
+            </div>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
         crossorigin="anonymous"></script>
