agregué mas contenido a managment

--- a/pages/managment.html
+++ b/pages/managment.html
@@ -122,98 +122,146 @@
                     </div>
                 </div>
             </div>
-            <!--Carrusel de Comentarios-->
-            <div id="carouselCards" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <div class="container" style="max-width: 950px;">
-                            <div class="card">
-                                <div class="card-header">
-                                    Falta de visión a largo plazo
-                                </div>
-                                <div class="card-body">
-                                    <figure>
-                                        <blockquote class="blockquote">
-                                            <p>“Trabajamos sin parar, pero muchas veces sin saber hacia dónde vamos. Hace falta levantar la cabeza y pensar: ¿qué quiero construir con esto?”</p>
-                                        </blockquote>
-                                        <figcaption class="blockquote-footer">
-                                            <cite title="Source Title">Miembro Comunidad Treetale.</cite>
-                                        </figcaption>
-                                    </figure>
-                                </div>
+        </div>
+        <!--Carrusel de Comentarios-->
+        <div id="carouselCards" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="container" style="max-width: 950px;">
+                        <div class="card">
+                            <div class="card-header">
+                                Falta de visión a largo plazo
                             </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="container" style="max-width: 950px;">
-                            <div class="card">
-                                <div class="card-header">
-                                    Dificultad para cobrar
-                                </div>
-                                <div class="card-body">
-                                    <figure>
-                                        <blockquote class="blockquote">
-                                            <p>“Una cosa es amar lo que haces, y otra es saber ponerle precio. A veces terminamos trabajando por menos de lo que vale, y eso te agota.”</p>
-                                        </blockquote>
-                                        <figcaption class="blockquote-footer">
-                                            <cite title="Source Title">Miembro Comunidad Treetale.</cite>
-                                        </figcaption>
-                                    </figure>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="container" style="max-width: 950px;">
-                            <div class="card">
-                                <div class="card-header">
-                                    Falta de formación en gestión
-                                </div>
-                                <div class="card-body">
-                                    <figure>
-                                        <blockquote class="blockquote">
-                                            <p>“Sabemos cuidar árboles, pero nadie nos enseñó a llevar un negocio. Y eso también es parte de hacer bien nuestro trabajo.”</p>
-                                        </blockquote>
-                                        <figcaption class="blockquote-footer">
-                                            <cite title="Source Title">Miembro Comunidad Treetale.</cite>
-                                        </figcaption>
-                                    </figure>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="container" style="max-width: 950px;">
-                            <div class="card">
-                                <div class="card-header">
-                                    Desorden interno que afecta todo
-                                </div>
-                                <div class="card-body">
-                                    <figure>
-                                        <blockquote class="blockquote">
-                                            <p>“En el árbol trabajamos bien, pero fuera de eso todo es un caos: presupuestos, agendas, cobros... Si no ordenamos eso, se nos va todo de las manos.”</p>
-                                        </blockquote>
-                                        <figcaption class="blockquote-footer">
-                                            <cite title="Source Title">Miembro Comunidad Treetale.</cite>
-                                        </figcaption>
-                                    </figure>
-                                </div>
+                            <div class="card-body">
+                                <figure>
+                                    <blockquote class="blockquote">
+                                        <p>“Trabajamos sin parar, pero muchas veces sin saber hacia dónde vamos.
+                                            Hace falta levantar la cabeza y pensar: ¿qué quiero construir con esto?”
+                                        </p>
+                                    </blockquote>
+                                    <figcaption class="blockquote-footer">
+                                        <cite title="Source Title">Miembro Comunidad Treetale.</cite>
+                                    </figcaption>
+                                </figure>
                             </div>
                         </div>
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselCards"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon bg-dark rounded-circle" aria-hidden="true"></span>
-                    <span class="visually-hidden">Anterior</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselCards"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon bg-dark rounded-circle" aria-hidden="true"></span>
-                    <span class="visually-hidden">Siguiente</span>
-                </button>
+                <div class="carousel-item">
+                    <div class="container" style="max-width: 950px;">
+                        <div class="card">
+                            <div class="card-header">
+                                Dificultad para cobrar
+                            </div>
+                            <div class="card-body">
+                                <figure>
+                                    <blockquote class="blockquote">
+                                        <p>“Una cosa es amar lo que haces, y otra es saber ponerle precio. A veces
+                                            terminamos trabajando por menos de lo que vale, y eso te agota.”</p>
+                                    </blockquote>
+                                    <figcaption class="blockquote-footer">
+                                        <cite title="Source Title">Miembro Comunidad Treetale.</cite>
+                                    </figcaption>
+                                </figure>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="container" style="max-width: 950px;">
+                        <div class="card">
+                            <div class="card-header">
+                                Falta de formación en gestión
+                            </div>
+                            <div class="card-body">
+                                <figure>
+                                    <blockquote class="blockquote">
+                                        <p>“Sabemos cuidar árboles, pero nadie nos enseñó a llevar un negocio. Y eso
+                                            también es parte de hacer bien nuestro trabajo.”</p>
+                                    </blockquote>
+                                    <figcaption class="blockquote-footer">
+                                        <cite title="Source Title">Miembro Comunidad Treetale.</cite>
+                                    </figcaption>
+                                </figure>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="container" style="max-width: 950px;">
+                        <div class="card">
+                            <div class="card-header">
+                                Desorden interno que afecta todo
+                            </div>
+                            <div class="card-body">
+                                <figure>
+                                    <blockquote class="blockquote">
+                                        <p>“En el árbol trabajamos bien, pero fuera de eso todo es un caos:
+                                            presupuestos, agendas, cobros... Si no ordenamos eso, se nos va todo de
+                                            las manos.”</p>
+                                    </blockquote>
+                                    <figcaption class="blockquote-footer">
+                                        <cite title="Source Title">Miembro Comunidad Treetale.</cite>
+                                    </figcaption>
+                                </figure>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselCards" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon bg-dark rounded-circle" aria-hidden="true"></span>
+                <span class="visually-hidden">Anterior</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselCards" data-bs-slide="next">
+                <span class="carousel-control-next-icon bg-dark rounded-circle" aria-hidden="true"></span>
+                <span class="visually-hidden">Siguiente</span>
+            </button>
+        </div>
+        <!--Carrusel final-->
+        <div id="carouselExampleCaptions" class="carousel slide">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="../assets/managment-1slide-carrusel.png" class="d-block w-100" alt="Tres arboristas en un parque con arboles revisando carpetas.">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Tu proyecto merece crecer con estructura</h5>
+                        <p>Gestionar bien no es burocracia: es darle estabilidad, valor y futuro a tu oficio.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="../assets/managment-2slide-carrusel.png" class="d-block w-100" alt="Manos en oficina haciendo trabajo administrativo">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Organizarte no te quita libertad, te la devuelve</h5>
+                        <p>Tu bienestar también depende de cómo gestionas tu tiempo y tus ingresos.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="../assets/managment-3slide-carrusel.png" class="d-block w-100" alt="arborista terminando jornada laboral con cara de satisfecho">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>El negocio también es parte del oficio</h5>
+                        <p>Cuando aprendes a gestionarlo, todo fluye mejor: tu trabajo, tu energía y tu impacto.</p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
     </main>
     <footer class="py-5 estilo-footer-jesu">
         <div class="container">
@@ -281,24 +329,6 @@
         </div>
     </footer>
     <!--Bootstrap JS-->
-    <div class="carousel-item">
-        <div class="card">
-            <div class="card-header">
-                Desorganización operativa
-            </div>
-            <div class="card-body">
-                <figure>
-                    <blockquote class="blockquote">
-                        <p>“Podamos bien, trabajamos duro, pero el caos interno nos hace perder tiempo y
-                            clientes. Ordenar el negocio también es parte del oficio.”</p>
-                    </blockquote>
-                    <figcaption class="blockquote-footer">
-                        <cite title="Source Title">Miembro Comunidad Treetale.</cite>
-                    </figcaption>
-                </figure>
-            </div>
-        </div>
-    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
         crossorigin="anonymous"></script>
